--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,9 +12,9 @@
     "@firebasegen/default": "file:generated/javascript/default",
     "firebase": "^10.13.2",
     "framer-motion": "^11.5.4",
-    "next": "14.2.8",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.0.1",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "slick-carousel": "^1.8.1",
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.8",
+    "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "vite": "^5.4.7"
